better harder faster stronger

--- a/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
+++ b/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
@@ -216,5 +216,8 @@
       <Name>IngresoPedidos</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
