--- a/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
+++ b/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
@@ -228,5 +228,11 @@
   <ItemGroup>
     <Resource Include="Resources\aaa.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\compo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\fail.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
