--- a/ConfiguracionUsuarios/App.config
+++ b/ConfiguracionUsuarios/App.config
@@ -19,5 +19,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="DBContext" connectionString="data source=VM-FORREST;initial catalog=PRODUCCION;persist security info=True;user id=FORREST;password=12345678;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=VM-FORREST;initial catalog=PRODUCCION;persist security info=True;user id=FORREST;password=12345678;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
