--- a/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
+++ b/ConfiguracionUsuarios/ConfiguracionUsuarios.csproj
@@ -109,18 +109,18 @@
     <Compile Include="ComponentesUserControl.xaml.cs">
       <DependentUpon>ComponentesUserControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataAccessLayer\Views\ComponenteView.cs" />
     <Compile Include="DataAccessLayer\Tables\Aplicacion.cs" />
     <Compile Include="DataAccessLayer\Tables\Autorizacion.cs" />
-    <Compile Include="DataAccessLayer\Tables\BooleanToVisibilityConverter.cs" />
     <Compile Include="DataAccessLayer\Tables\Categoria.cs" />
     <Compile Include="DataAccessLayer\Tables\Componente.cs" />
+    <Compile Include="DataAccessLayer\Views\ComponenteView.cs" />
     <Compile Include="DataAccessLayer\DBContext.cs" />
     <Compile Include="DataAccessLayer\Tables\Despacho.cs" />
     <Compile Include="DataAccessLayer\Tables\Estado.cs" />
     <Compile Include="DataAccessLayer\Tables\Falla.cs" />
     <Compile Include="DataAccessLayer\Tables\Imagen.cs" />
     <Compile Include="DataAccessLayer\Tables\Insumo.cs" />
+    <Compile Include="DataAccessLayer\Tables\Marca.cs" />
     <Compile Include="DataAccessLayer\Tables\Modelo.cs" />
     <Compile Include="DataAccessLayer\Tables\Observacion.cs" />
     <Compile Include="DataAccessLayer\Tables\Orden.cs" />
@@ -134,6 +134,7 @@
     <Compile Include="DataAccessLayer\Tables\Reparacion.cs" />
     <Compile Include="DataAccessLayer\Tables\ReprocesoPedido.cs" />
     <Compile Include="DataAccessLayer\Tables\sysdiagrams.cs" />
+    <Compile Include="DataAccessLayer\Tables\BooleanToVisibilityConverter.cs" />
     <Compile Include="DataAccessLayer\Tables\Usuario.cs" />
     <Compile Include="DataAccessLayer\Views\UsuarioView.cs" />
     <Compile Include="DataAccessLayer\Tables\Version.cs" />
